Clean up and reorder.

--- a/assets/css/sass/_settings.scss
+++ b/assets/css/sass/_settings.scss
@@ -8,6 +8,8 @@ $color3: $DARK_BLUE;
 $color4: $FUXSIA;
 $color5: $LIGHT_FUXSIA;
 
+$link_color2: $FUXSIA;
+
 
 // -------------------------------------- FONTS
 
@@ -34,3 +36,4 @@ $footer_h_2: 80px;
 $max_layout_width: 1200px;
 
 $layout_padding: 80px;
+$layout_verticalSidebar_padding: $header_vertical_w;
