--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -6,10 +6,9 @@
 @import "partials/_mixins";
 @import "partials/_generals";
 
-@import "elements/_headerMenu";
+@import "elements/_mainHeader";
 @import "elements/_grid";
 @import "elements/_footer";
-@import "elements/_landscape";
 
 @import "sections/_home";
 @import "sections/_work";
