--- a/assets/css/sass/elements/_footer.scss
+++ b/assets/css/sass/elements/_footer.scss
@@ -1,45 +1,54 @@
+@mixin footer {
+  footer.container {
+    height: $footer_h_1;
 
-footer.container {
-  height: $footer_h_1;
+    @media screen and (max-width: 480px) {
+      height: $footer_h_2;
+    } 
 
-  @media screen and (max-width: 480px) {
-    height: $footer_h_2;
-  }  
+    @media screen and (max-device-height: 600px) and (orientation: landscape) {
+      height: $footer_h_2;
+    } 
 
-  & > div {
-    @include vCentered;
+    > div {
+      @include vCentered;
 
-    @media screen and (max-width: 650px) {
-      display: block;
-      width: 100%;
-      margin: 3% auto 0;
-      transform: none;
-      top: 0;
+      @media screen and (max-width: 650px) {
+        display: block;
+        width: 100%;
+        margin: 3% auto 0;
+        transform: none;
+        top: 0;
+      }
+
+      @media screen and (max-device-height: 600px) and (orientation: landscape) {
+        margin : 1.5% 0 0;
+      }
     }
-  }
-  
-  .site-info {
-    float: left;
-  }
+    
+    .site-info {
+      float: left;
+    }
 
-  .social-links {
-    float: right;
-   
-    li {
-      display: inline-block;
-      padding-left: 6px;
+    .social-links {
+      float: right;
+     
+      li {
+        display: inline-block;
+        padding-left: 6px;
 
-      &:hover {
-        cursor: pointer;
-      }
+        &:hover {
+          cursor: pointer;
+        }
 
-      &:first-child {
-        padding-left: 0;
-      }
-   
-      a {
-        width: 32px;
-        height: 32px;
+        &:first-child {
+          padding-left: 0;
+        }
+     
+        a {
+          width: 32px;
+          height: 32px;
+        }
       }
     }
   }
