--- a/assets/css/sass/sections/_about.scss
+++ b/assets/css/sass/sections/_about.scss
@@ -6,9 +6,28 @@
 		@media screen and (max-width: 1350px) {
 	    padding: 5% 0 8%;
 		}
+
+		@media screen and (max-device-height: 600px) and (orientation: landscape) {
+			width: 80%;
+      padding-bottom: 5%;
+		}
+
+		> div {
+			@media screen and (max-device-height: 600px) and (orientation: landscape) {
+				float: none;
+			}
+		}
 	}
 
   .content {
+
+  	&.tiles.three .tile {
+  		@media screen and (max-device-height: 600px) and (orientation: landscape) {
+  			width: 32%;
+        margin: auto;
+  		}
+  	}
+
     .img-wrapper {
       width: 70%;
       margin: 0 auto 8%;
