--- a/assets/css/sass/layout/_layout.scss
+++ b/assets/css/sass/layout/_layout.scss
@@ -93,7 +93,7 @@ body {
 
 .state2 .container {
 	@media screen and (max-device-height: 600px) and (orientation: landscape) {
-		padding-left: 0;
+	//	padding-left: 0;
 	}
 }
 
