Fonts checked for <350px wide.

--- a/assets/css/sass/_settings.scss
+++ b/assets/css/sass/_settings.scss
@@ -16,13 +16,15 @@ $link_color2: $FUXSIA;
 $font_family_1: 'Lato', sans-serif;
 $font_family_2: 'Dosis', sans-serif;
 
+$base_font_size: 16px;
+
 
 // ------------------------------- FIX MEASURES
 
 $header_h_1: 139px;
 $header_h_2: 111px;
 $header_h_3: 100px;
-$header_h_4: 80px;
+$header_h_4: 85px;
 $header_h_5: 60px;
 
 $header_vertical_w: 70px;
