--- a/assets/css/sass/elements/_grid.scss
+++ b/assets/css/sass/elements/_grid.scss
@@ -114,7 +114,8 @@
         width: 33%;
       
         @media screen and (max-width: 650px) {
-          width: 80%;
+   //       width: 80%;
+          width: 100%;
           margin: 10% auto;
         }
       }
