--- a/assets/css/sass/fonts/_fonts-css.scss
+++ b/assets/css/sass/fonts/_fonts-css.scss
@@ -1,10 +1,12 @@
 $font_family_1: 'Lato', sans-serif !default;
 $font_family_2: 'Dosis', sans-serif !default;
 
+$base_font_size: 16px !default;
 
 body {
   font-family: $font_family_1;
   font-weight: 100;
+  font-size: $base_font_size;
 
   @media screen and (max-width: 650px) {
     text-align: center;
@@ -13,37 +15,32 @@ body {
   h1 {
     font-family: $font_family_2;
     font-weight: 600;
-    font-size: 1em;
+    font-size: 2em;
   }
 
   p {
-    line-height: 1.5;
+//    line-height: 1.5;
+    line-height: 1.2;
     letter-spacing: .17px;
+    word-spacing: .12em;
+    font-size: 1em;
   }
-}
 
+  a {
+    font-size: 1em;
+  }
 
-// ---------------------------------- LAYOUT
-.small-header {
-  @media screen and (max-device-height: 550px) and (orientation: landscape) {
-
-    #main-header {
-      text-align: center;
-    }
-
-    #content {
-      .sub-header {
-        font-size: .12em;
-      }
-    }
+  .fittextjs > * {
+    font-size: 1em;
   }
 }
 
 
 // ---------------------------------- HEADER
 #header-nav {
+  
   font-weight: 700;
-  font-size: 18px;
+  font-size: 1.1em;
   text-transform: uppercase;
 
   @media screen and (max-width: 650px) {
@@ -51,11 +48,15 @@ body {
   }
 
   @media screen and (max-width: 480px) {
-    font-size: 0.76em;
+ //   font-size: 0.76em;
   }
 
   @media screen and (max-width: 350px) {
-    font-size: .6em;
+  //  font-size: .6em;
+  }
+
+  @media screen and (max-width: 300px) {
+    font-size: .7em;
   }
 
   li {
@@ -86,13 +87,13 @@ body {
       white-space: nowrap;
 
       @media screen and (max-width: 350px) {
-        font-size: .7em;
+    //    font-size: .7em;
       }
     }
 
     // ---------- SECTION SUB-HEADER
     .sub-header {
-      font-size: .158em;
+  //    font-size: .158em;
       text-align: center;
     }
   }
@@ -110,13 +111,15 @@ body {
   .header {
     h1 {
       @media screen and (max-width: 350px) {
-        font-size: .9em;
+   //     font-size: .9em;
       }
     }
 
     .sub-header {
+
+      word-spacing: 2px;
       @media screen and (max-width: 480px) {
-        font-size: .2em;
+ //       font-size: .2em;
       }
     }
   }
@@ -134,15 +137,26 @@ body {
 // ------------------ SECTION 3 
 // ---------------------- ABOUT
 .about.section  {
+
+  font-size: .9em;
+  
   .sub-header {
+
+   
     @media screen and (min-width: 650px) {
-      font-size: .13em;
+ //     font-size: .13em;
     }
   }
 
   @media screen and (max-device-height: 550px) and (orientation: landscape) {
     .tiles.three .tile {
-      font-size: .7em;
+//      font-size: .7em;
+    }
+  }
+
+  .content {
+    p {
+      word-spacing: .1em;
     }
   }
 }
@@ -156,13 +170,17 @@ body {
       text-align: right;
     }
 
+    @media screen and (max-width: 350px) {
+      text-align: center;
+    }
+
     h1 {
       @media screen and (max-device-height: 550px) and (orientation: landscape) {
-        font-size: .85em;
+  //      font-size: .85em;
       }
 
       &:first-child {
-        font-size: 1.2em;
+        font-size: 1.5em;
       }
 
       a {
@@ -174,11 +192,15 @@ body {
       font-weight: 400;
 
       @media screen and (max-width: 650px) {
-        font-size: .4em;
+//        font-size: .4em;
       }
 
       @media screen and (max-device-height: 550px) and (orientation: landscape) {
-        font-size: .25em;
+ //       font-size: .25em;
+      }
+
+      @media screen and (max-width: 350px) {
+        font-weight: 100;
       }
     }
   }
