fonts checked for under 650px wide.

--- a/assets/css/sass/elements/_grid.scss
+++ b/assets/css/sass/elements/_grid.scss
@@ -114,9 +114,12 @@
         width: 33%;
       
         @media screen and (max-width: 650px) {
-   //       width: 80%;
           width: 100%;
           margin: 10% auto;
+        }
+
+        @media screen and (max-width: 350px) {
+          width: 100%;
         }
       }
     }
