--- a/assets/css/sass/sections/_home.scss
+++ b/assets/css/sass/sections/_home.scss
@@ -26,8 +26,9 @@
 	  }
 
 	  @media screen and (max-device-height: 600px) and (orientation: landscape) {
-	  	width: 80%;
-	  	float: right;
+	  //	width: 80%;
+	  	width: 70%;
+	  //	float: right;
 	  }
 
 	  > div {
