--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,9 @@ body {
     letter-spacing: .17px;
     word-spacing: .12em;
     font-size: 1em; }
+    @media screen and (max-device-height: 600px) and (orientation: landscape) {
+      body p {
+        font-size: .9em; } }
   body a {
     font-size: 1em; }
   body .fittextjs > * {
@@ -70,7 +73,7 @@ body {
   text-transform: uppercase; }
   @media screen and (max-width: 650px) {
     #header-nav {
-      font-size: 0.85em; } }
+      font-size: 0.8em; } }
   @media screen and (max-width: 300px) {
     #header-nav {
       font-size: .7em; } }
@@ -95,7 +98,7 @@ body {
 
 .home.section .header .sub-header {
   word-spacing: 2px; }
-  @media screen and (min-width: 480px) and (max-width: 650px) {
+  @media screen and (min-width: 480px) and (max-width: 650px) and (min-device-height: 550px) {
     .home.section .header .sub-header {
       font-size: 1.2em; } }
 
@@ -195,8 +198,7 @@ img {
       width: 100%; } }
   @media screen and (max-device-height: 600px) and (orientation: landscape) {
     .home.section .header {
-      width: 80%;
-      float: right; } }
+      width: 70%; } }
   @media screen and (max-device-height: 600px) and (orientation: landscape) {
     .home.section .header > div {
       float: none; } }
@@ -543,7 +545,7 @@ p {
       margin-right: -4px; }
     #header-nav li.active-link, #header-nav li:hover {
       border-bottom: 3px solid #DF3F54; }
-    #header-nav li.no-touch {
+    .mobile #header-nav .no-touch {
       border: none; }
     #header-nav li a {
       display: block;
@@ -645,9 +647,11 @@ p {
       border: none;
       border-left: 6px solid #E9E8E3; }
       .state2 #header-nav li.active-link, .state2 #header-nav li:hover {
-        border-left-color: #DF3F54; }
-      .state2 #header-nav li.no-touch {
-        border-left-color: #E9E8E3; }
+        border-left: 6px solid #DF3F54; } }
+  @media screen and (max-device-height: 600px) and (orientation: landscape) and (max-device-height: 600px) and (orientation: landscape) {
+    .mobile .state2 #header-nav .no-touch {
+      border-left: 6px solid #E9E8E3; } }
+  @media screen and (max-device-height: 600px) and (orientation: landscape) {
       .state2 #header-nav li a {
         margin: 50% 0 0;
         padding: 0;
