--- a/assets/css/sass/elements/_logo.scss
+++ b/assets/css/sass/elements/_logo.scss
@@ -29,7 +29,7 @@
     		width: 20%;
     	}
 
-      @media screen and (max-device-height: 600px) and (orientation: landscape) {
+      @media #{$LANDSCAPE} {
         width: 18%;
         margin: 0;
         padding: 2% 0;
@@ -54,7 +54,7 @@
         padding: 2.5% 0;
       }
 
-      @media screen and (max-device-height: 600px) and (orientation: landscape) {
+      @media #{$LANDSCAPE} {
         float: right;
         margin: 0 auto;
         padding: 4% 0;
