--- a/assets/css/sass/fonts/_fonts-css.scss
+++ b/assets/css/sass/fonts/_fonts-css.scss
@@ -5,7 +5,7 @@ $base_font_size: 16px !default;
 
 body {
   font-family: $font_family_1;
-  font-weight: 100;
+  font-weight: $font_weight_light;
   font-size: $base_font_size;
 
   @media screen and (max-width: 650px) {
@@ -14,7 +14,7 @@ body {
 
   h1 {
     font-family: $font_family_2;
-    font-weight: 600;
+    font-weight: $font_weight_bold;
     font-size: 2em;
   }
 
@@ -24,7 +24,7 @@ body {
     word-spacing: .12em;
     font-size: 1em;
 
-    @media screen and (max-device-height: 600px) and (orientation: landscape) {
+    @media #{$LANDSCAPE} {
       font-size: .9em;
     }
   }
@@ -56,11 +56,11 @@ body {
 
   li {
     &.active-link {
-      font-weight: 900;
+      font-weight: $font_weight_boldest;
     }
 
     &:hover {
-      font-weight: 900;
+      font-weight: $font_weight_boldest;
     }
   }
 }
@@ -160,10 +160,10 @@ body {
     }
 
     .sub-header {
-      font-weight: 400;
+      font-weight: $font_weight_middle;
 
       @media screen and (max-width: 480px) {
-        font-weight: 100;
+        font-weight: $font_weight_light;
       }
     }
   }
@@ -178,11 +178,11 @@ footer.container {
   }
 
   .site-info {
-    font-weight: 700;
+    font-weight: $font_weight_bolder;
     font-size: .95em;
 
     a {
-      font-weight: 900;
+      font-weight: font_weight_boldest;
     }
   }
 
