--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body {
     letter-spacing: .17px;
     word-spacing: .12em;
     font-size: 1em; }
-    @media screen and (max-device-height: 600px) and (orientation: landscape) {
+    @media screen and (max-height: 600px) and (orientation: landscape) {
       body p {
         font-size: .9em; } }
   body a {
@@ -134,7 +134,7 @@ footer.container .site-info {
   font-weight: 700;
   font-size: .95em; }
   footer.container .site-info a {
-    font-weight: 900; }
+    font-weight: font_weight_boldest; }
 footer.container .social-links {
   font-size: 0; }
 
@@ -181,7 +181,7 @@ img {
 
 .home.section .container {
   padding-bottom: 10%; }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .home.section .container {
       min-height: calc(100vh - 60px); } }
 .home.section .header {
@@ -197,10 +197,10 @@ img {
     .home.section .header {
       margin-top: 5%;
       width: 100%; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .home.section .header {
       width: 70%; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .home.section .header > div {
       float: none; } }
   .home.section .header h1:first-child::before {
@@ -305,11 +305,11 @@ img {
   @media screen and (max-width: 1350px) {
     .about .header {
       padding: 5% 0 8%; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .about .header {
       width: 80%;
       padding-bottom: 5%; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .about .header > div {
       float: none; } }
 @media screen and (max-width: 1350px) and (min-width: 650px) {
@@ -337,25 +337,29 @@ img {
 @media screen and (max-width: 350px) {
   .contact.section .container {
     min-height: 150px; } }
-@media screen and (max-device-height: 600px) and (orientation: landscape) {
+@media screen and (max-height: 600px) and (orientation: landscape) {
   .contact.section .container {
     min-height: initial;
     height: 100%; } }
 .contact.section .header {
   position: relative;
-  padding: 7% 0;
+  padding: 5% 0;
   width: 100%; }
   @media screen and (max-width: 1350px) and (min-width: 650px) {
     .contact.section .header {
       text-align: right; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .contact.section .header {
       width: 100%; } }
-  @media screen and (max-width: 350px) {
-    .contact.section .header h1:first-child {
-      width: 100%; } }
+  @media screen and (max-height: 600px) and (orientation: landscape) and (min-width: 480px) and (max-width: 650px) {
+    .contact.section .header h1 {
+      width: 75%; }
+    .contact.section .header .sub-header {
+      font-size: .9em;
+      font-weight: 100; } }
+
   @media screen and (max-width: 1350px) and (min-width: 650px) {
-    .contact.section .header h1:first-child {
+    .contact.section .header .fittextjs.hello {
       width: 50%;
       display: inline-block; } }
   .contact.section .header .sub-header {
@@ -371,17 +375,17 @@ img {
     @media screen and (max-width: 480px) {
       .contact.section .header .sub-header {
         float: none; } }
-    @media screen and (max-device-height: 600px) and (orientation: landscape) {
+    @media screen and (max-height: 600px) and (orientation: landscape) {
       .contact.section .header .sub-header {
         float: right; } }
 
-@media screen and (max-device-height: 600px) and (orientation: landscape) {
+@media screen and (max-height: 600px) and (orientation: landscape) {
   .state2 #sections .contact.section.last {
     height: calc(100vh - 80px); } }
 
 html {
   height: 100%; }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     html {
       content: "isLandscape"; } }
 
@@ -422,7 +426,7 @@ p {
     min-height: calc(100vh - 85px); }
     .state1 #sections .section.last {
       min-height: calc(100vh - 185px); } }
-@media screen and (max-device-height: 600px) and (orientation: landscape) {
+@media screen and (max-height: 600px) and (orientation: landscape) {
   .state1 #main-header {
     height: 60px; }
   .state1 #sections::before {
@@ -462,7 +466,7 @@ p {
     min-height: calc(100vh - 85px); }
     .state2 #sections .section.last {
       min-height: calc(100vh - 165px); } }
-@media screen and (max-device-height: 600px) and (orientation: landscape) {
+@media screen and (max-height: 600px) and (orientation: landscape) {
   .state2 #main-header {
     height: 60px; }
   .state2 #sections::before {
@@ -515,7 +519,7 @@ p {
   @media screen and (max-width: 350px) {
     .state1 #logo {
       width: 20%; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .state1 #logo {
       width: 18%;
       margin: 0;
@@ -532,7 +536,7 @@ p {
     .state2 #logo {
       margin: 0 auto;
       padding: 2.5% 0; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .state2 #logo {
       float: right;
       margin: 0 auto;
@@ -566,7 +570,7 @@ p {
       @media screen and (max-width: 350px) {
         #header-nav li a {
           padding: 30px 21px; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     #header-nav.expanded {
       float: none;
       width: 100%;
@@ -596,7 +600,7 @@ p {
   @media screen and (max-width: 480px) {
     .state1 #header-nav {
       margin: 0 auto; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .state1 #header-nav {
       margin-top: 5%; } }
   .state1 #header-nav.expanded {
@@ -633,7 +637,7 @@ p {
       -webkit-transition: opacity 0.5s linear;
       -ms-transition: opacity 0.5s linear;
       transition: opacity 0.5s linear; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .state2 #header-nav {
       display: block;
       visibility: visible;
@@ -650,7 +654,7 @@ p {
       height: 100%;
       font-size: .65em;
       text-align: right; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .state2 #header-nav li {
       width: 90%;
       height: 15%;
@@ -660,10 +664,10 @@ p {
       border-left: 6px solid #E9E8E3; }
       .state2 #header-nav li.active-link, .state2 #header-nav li:hover {
         border-left: 6px solid #DF3F54; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) and (max-device-height: 600px) and (orientation: landscape) {
     .mobile .state2 #header-nav .no-touch {
       border-left: 6px solid #E9E8E3; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
       .state2 #header-nav li a {
         margin: 50% 0 0;
         padding: 0;
@@ -680,7 +684,7 @@ p {
     -ms-transition: opacity 0.5s linear;
     transition: opacity 0.5s linear; }
 
-@media screen and (max-device-height: 600px) and (orientation: landscape) {
+@media screen and (max-height: 600px) and (orientation: landscape) {
   #collapsed-menu {
     display: none; } }
 #collapsed-menu a {
@@ -738,7 +742,7 @@ p {
   -ms-transition: opacity 0.2s linear;
   transition: opacity 0.2s linear; }
 
-@media screen and (max-device-height: 600px) and (orientation: landscape) {
+@media screen and (max-height: 600px) and (orientation: landscape) {
   .state2 #main-header {
     position: fixed;
     left: 0;
@@ -765,7 +769,7 @@ p {
   @media screen and (max-width: 350px) {
     .section .header {
       width: 100%; } }
-@media screen and (max-device-height: 600px) and (orientation: landscape) and (max-width: 650px) {
+@media screen and (max-height: 600px) and (orientation: landscape) and (max-width: 650px) {
   .section .header {
     width: initial;
     width: 70%; } }
@@ -773,7 +777,7 @@ p {
   @media screen and (max-width: 650px) {
     .section .header > div {
       float: none; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .section .header .sub-header {
       float: none; } }
   .section .header .sub-header hr {
@@ -791,7 +795,7 @@ p {
   @media screen and (max-width: 650px) {
     .section .content {
       padding: 0 0 12%; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     .section .content {
       padding: 0 0 12%; } }
 
@@ -822,7 +826,7 @@ footer.container {
   @media screen and (max-width: 480px) {
     footer.container {
       height: 80px; } }
-  @media screen and (max-device-height: 600px) and (orientation: landscape) {
+  @media screen and (max-height: 600px) and (orientation: landscape) {
     footer.container {
       height: 80px; } }
   footer.container > div {
@@ -838,7 +842,7 @@ footer.container {
         margin: 3% auto 0;
         transform: none;
         top: 0; } }
-    @media screen and (max-device-height: 600px) and (orientation: landscape) {
+    @media screen and (max-height: 600px) and (orientation: landscape) {
       footer.container > div {
         margin: 1.5% 0 0; } }
   footer.container .site-info {
