--- a/assets/css/sass/elements/_headerMenu.scss
+++ b/assets/css/sass/elements/_headerMenu.scss
@@ -81,7 +81,8 @@
       }
 
       @media #{$LANDSCAPE} {
-        margin-top: 5%;
+        margin-top: 0;
+        @include vCentered;
       }
 
       &.expanded {
