--- a/assets/css/sass/sections/_home.scss
+++ b/assets/css/sass/sections/_home.scss
@@ -26,37 +26,31 @@
 	  }
 
 	  @media #{$LANDSCAPE} {
-	  //	width: 80%;
 	  	width: 70%;
-	  //	float: right;
 	  }
 
-	  > div {
+	  .fittextjs {
+	  	display: block;
+
 	  	@media #{$LANDSCAPE} {
 		  	float: none;
 		  }
 	  }
    
-    h1 {
-	    &:first-child::before {
-	      content: " ";
-	      width: .55em;
-	      height: .5em;
-	      display: inline-block;
-	      background: url('../images/smile.png') no-repeat 2.5% 34%;
-	      background-size: contain;
-	      position: relative;
-	      top: .1em;
-	    }
+    .smile::before {
+	    content: " ";
+	    width: .55em;
+	    height: .5em;
+	    display: inline-block;
+	    background: url('../images/smile.png') no-repeat 2.5% 34%;
+	    background-size: contain;
+	    position: relative;
+	    top: .1em;
      }
   
 		.sub-header {
 		  float: right;
 		  width: 95%;
-
-		  @media screen and (max-width: 480px) {
-		//    float: none;
-		  }
 		}
 	}
 }
